template for deploying logs service

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ predictionUI/.Dockerfile.swp
 predictionUI/html/.index.html.swp
 predictionUI/.Dockerfile.swp
 predictionUI/html/.index.html.swp
+CPlogdRESTService/openshift-templates/.README.swp
+CPlogdRESTService/openshift-templates/.logd_service.yaml.swp
