Wait for ready added to template

--- a/CPlogdRESTService/openshift-templates/logd_service.yaml
+++ b/CPlogdRESTService/openshift-templates/logd_service.yaml
@@ -12,6 +12,8 @@ objects:
     
 - kind: BuildConfig
   metadata:
+    annotations:
+      template.alpha.openshift.io/wait-for-ready: true  
     labels:
       app: cplogd
     name: cplogd
@@ -38,6 +40,8 @@ objects:
 
 - kind: DeploymentConfig
   metadata:
+    annotations:
+      template.alpha.openshift.io/wait-for-ready: true  
     labels:
       app: cplogd
     name: cplogd
