--- a/CPlogdRESTService/pom.xml
+++ b/CPlogdRESTService/pom.xml
@@ -5,142 +5,99 @@
 	<artifactId>CPlogD</artifactId>
 	<packaging>war</packaging>
 	<name>CP Log D</name>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 
 	<properties>
-		<swagger.ui.version>3.4.2</swagger.ui.version>
-		<swagger.url>https://github.com/swagger-api/swagger-ui/archive</swagger.url>
-		<swagger.md5>f06fcf8f95b2ffb22718c6d367f25ace</swagger.md5>
 
 		<cpsign.version>0.6.16</cpsign.version>
-		<java.version>1.8</java.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<swagger-core-version>1.5.21</swagger-core-version>
-		<jetty-version>9.2.9.v20150224</jetty-version>
-		<jersey2-version>2.22.2</jersey2-version>
-		<jackson-version>2.8.7</jackson-version>
-		<junit-version>4.12</junit-version>
-		<logback-version>1.1.7</logback-version>
-		<servlet-api-version>2.5</servlet-api-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<swagger-core-version>2.1.10</swagger-core-version>
+		<jetty-version>9.4.32.v20200930</jetty-version>
+		<jersey2-version>2.32</jersey2-version>
+		<jackson-version>2.12.1</jackson-version>
+		<junit-version>4.13</junit-version>
+		<logback-version>1.1.7</logback-version>
+		<servlet-api-version>3.1.0</servlet-api-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.failsafe.version>3.0.0-M5</maven.failsafe.version>
+		<maven.surefire.version>3.0.0-M5</maven.surefire.version>
+		<application.vendor>Aros Bio AB</application.vendor>
+		<maven.build.timestamp.format>yyyyMMdd_HHmmss</maven.build.timestamp.format>
+		<mf.impl.vendor>Aros Bio AB</mf.impl.vendor>
+        <maven.war.version>3.3.2</maven.war.version>
+        <rest-assured.version>4.4.0</rest-assured.version>
 	</properties>
-	<!-- <licenses> <license> <name>Unlicense</name> <url>http://unlicense.org</url> 
-		<distribution>repo</distribution> </license> </licenses> -->
-	<profiles>
-		<profile>
-			<id>default</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>3.1.0</version>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>openshift</id>
-			<build>
-				<plugins>
-
-					<plugin>
-						<groupId>com.googlecode.maven-download-plugin</groupId>
-						<artifactId>download-maven-plugin</artifactId>
-						<version>1.3.0</version>
-						<executions>
-							<execution>
-								<id>download-swagger-ui</id>
-								<phase>process-resources</phase>
-								<goals>
-									<goal>wget</goal>
-								</goals>
-								<configuration>
-									<url>${swagger.url}/v${swagger.ui.version}.zip</url>
-									<md5>${swagger.md5}</md5>
-									<unpack>true</unpack>
-									<outputDirectory>${project.build.directory}</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<dependencies>
-							<dependency>
-								<groupId>ant</groupId>
-								<artifactId>ant-nodeps</artifactId>
-								<version>1.6.5</version>
-							</dependency>
-						</dependencies>
-						<executions>
-							<execution>
-								<id>change-swagger-ui-url</id>
-								<phase>prepare-package</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<replaceregexp match='"http://petstore.swagger.io/v2/swagger.json"'
-											replace='window.location.origin + "/v1/swagger.json"' byline="true">
-											<fileset
-												dir="${project.build.directory}/swagger-ui-${swagger.ui.version}/dist">
-												<include name="*.html" />
-												<include name="*.js" />
-											</fileset>
-										</replaceregexp>
-									</tasks>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-resources-plugin</artifactId>
-						<version>3.0.2</version>
-						<executions>
-							<execution>
-								<id>copy-swagger-ui</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${project.build.directory}/${project.artifactId}</outputDirectory>
-									<resources>
-										<resource>
-											<directory>${project.build.directory}/swagger-ui-${swagger.ui.version}/dist</directory>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>3.1.0</version>
-						<configuration>
-							<warName>ROOT</warName>
-							<webResources>
-								<resource>
-									<directory>${project.build.directory}/swagger-ui-${swagger.ui.version}/dist</directory>
-									<targetPath>/</targetPath>
-								</resource>
-							</webResources>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+	
+	
 	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
+			</plugin>
+
+			<!-- Test plugins -->
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.version}</version>
+                <!-- make it possible to skip unit-tests -->
+                <configuration>
+                    <skip>${skipUnitTests}</skip>
+                </configuration>
+
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty-version}</version>
+				<configuration>
+					<httpConnector>
+						<port>${target-port}</port>
+					</httpConnector>
+					<stopKey>quit</stopKey>
+					<stopPort>9000</stopPort>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>stop</goal><!-- Stop any running jetty instances -->
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${maven.failsafe.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<!-- 
+	<build>
+	
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
@@ -213,13 +170,130 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	-->
 	<dependencies>
+		<!-- Requirements from Swagger-Core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jackson-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson-version}</version>
+		</dependency>
+			<!-- Test deps -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${rest-assured.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+                    <!-- This is already included in CPSign -->
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-lang3</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.stefanbirkner</groupId>
+			<artifactId>system-rules</artifactId>
+			<version>1.19.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- CPSIGN -->
 		<dependency>
 			<groupId>com.genettasoft</groupId>
 			<artifactId>cpsign</artifactId>
 			<version>${cpsign.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>com.arosbio</groupId>
+			<artifactId>cpsign</artifactId>
+			<version>${cpsign.version}</version>
+		</dependency>
+		 -->
+
+		<!-- OpenAPI -->
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-jaxrs2</artifactId>
+			<version>${swagger-core-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-jaxrs2-servlet-initializer-v2</artifactId>
+			<version>${swagger-core-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>${swagger-core-version}</version>
+		</dependency>
+
+
+		<!-- Correct servlet API from the Jetty Sever we target -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet-api-version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>${jersey2-version}</version>
+		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>${jersey2-version}</version>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>${jersey2-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>${jersey2-version}</version>
+		</dependency>
+		
+		<!-- 
+		<dependency>
+			<groupId>com.genettasoft</groupId>
+			<artifactId>cpsign</artifactId>
+			<version>${cpsign.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-jersey2-jaxrs</artifactId>
@@ -269,7 +343,9 @@
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
 			<version>${jackson-version}</version>
 		</dependency>
+		 -->
 		<!-- Base64 encoding that works in both JVM and Android -->
+		<!-- 
 		<dependency>
 			<groupId>com.brsanthu</groupId>
 			<artifactId>migbase64</artifactId>
@@ -280,7 +356,7 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-
+ -->
 
 		<!-- Bean Validation API support -->
 		<!-- <dependency> <groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
